# marketing-mix-model

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: basic_fit.py
mmm/: __init__.py  adstock.py  data.py  decomposition.py  model.py  optimizer.py  plots.py  saturation.py
tests/: test_adstock.py  test_saturation.py
