[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "marketing-mix-model"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "pymc>=5.0",
    "arviz>=0.14",
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "nbformat"]
